# course_7_homework

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  env_example  mypy.ini  pyproject.toml  requirements.prod.txt  requirements.txt  test.py
.github/workflows/: build_and_deploy.yaml
bot/: models.py  serializers.py  urls.py  views.py
bot/management/: _chat.py  _state.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py
bot/tg/: client.py  dc.py
core/: admin.py  apps.py  fields.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_options.py
deploy/: docker-compose-ci.yaml  nginx.conf
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_alter_goal_title_alter_goalcategory_title_comment.py  0003_alter_comment_goal_alter_goal_category.py  0004_alter_comment_goal_alter_goal_category.py  0005_board_goalcategory_board_boardparticipant.py  0006_create_new_objects.py  0007_alter_goalcategory_board.py
tests/: conftest.py  factories.py
tests/boards/: test_board_create.py  test_board_list.py  test_board_read.py
tests/categories/: test_category_create.py  test_category_list.py  test_category_read.py
tests/comments/: test_comment_create.py  test_comment_list.py  test_comment_read.py
tests/goals/: test_goal_create.py  test_goal_list.py  test_goal_read.py
todolist/: settings.py  urls.py
todolist/todolist/: settings.py
